infra/manifests/local/application-dependencies/keycloak.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
  labels:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/component: idp
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-nip-io
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - host: keycloak.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: local-dev-service
            port:
              name: https
  tls:
  - hosts:
      - keycloak.127.0.0.1.nip.io
    secretName: keycloak-https-certificate # Reuse Keycloak certificate
